--- a/app/views/party/groups/_section.html.erb
+++ b/app/views/party/groups/_section.html.erb
@@ -1,46 +1,34 @@
 <section id="<%= dom_id(party, :groups_section) %>" class="space-y-2">
-  <div class="flex items-center justify-between">
-    <h3 class="font-semibold">Groups</h3>
-    <div class="flex gap-2">
-      <% unless party.groups.exists?(party_group_type_code: "household") %>
-        <%= button_to "Create household",
-              create_household_party_party_path(party.public_id),
-              method: :post,
-              class: "btn btn-secondary btn-soft btn-xs" %>
-      <% end %>
-
-      <%= link_to "Join group",
-            new_party_party_group_membership_path(party.public_id, from: :show),
-            data: { turbo_frame: "comm_modal_frame" },
-            class: "btn btn-ghost btn-xs" %>
-    </div>
-  </div>
-
-  <ul class="menu menu-sm bg-base-100 rounded-box w-full">
+  <ul class="divide-y divide-base-300 w-full -mx-2 md:-mx-3">
     <% party.groups.each do |g| %>
-      <li class="py-1">
-        <div class="flex items-center justify-between">
-          <div>
-            <div class="font-medium"><%= g.name %></div>
-            <div class="text-xs opacity-70"><%= g.party_group_type_code %></div>
-          </div>
-          <div class="flex gap-2">
-            <%= link_to "Open", party_group_path(g), class: "btn btn-ghost btn-xs" %>
-
-            <%= link_to "Rename",
-              edit_party_group_path(g, from: :show),
-              data: { turbo_frame: "comm_modal_frame" },
-              class: "btn btn-ghost btn-xs" %>
-
-        <%= button_to "Leave",
-              party_group_membership_path(g),
-              method: :delete,
-              params: { party_id: party.id, from: :show, party_public_id: party.public_id },
-              form: { data: { turbo_frame: dom_id(party, :groups_section), turbo_confirm: "Remove from this group?" } },
-              class: "btn btn-ghost btn-xs text-error" %>
+      <li class="py-3 flex items-center justify-between">
+        <div>
+          <div class="font-medium"><%= g.name %></div>
+          <div class="text-xs opacity-70">
+            <%= (g.respond_to?(:group_type) && g.group_type&.name) || g.party_group_type_code %>
           </div>
         </div>
+
+        <div class="flex gap-2">
+          <%= link_to "Open", party_group_path(g), class: "btn btn-ghost btn-xs" %>
+
+          <%= link_to "Rename",
+                edit_party_group_path(g, from: :show),
+                data: { turbo_frame: "comm_modal_frame" },
+                class: "btn btn-ghost btn-xs" %>
+
+          <%= button_to "Leave",
+                party_group_membership_path(g),
+                method: :delete,
+                params: { party_id: party.id, from: :show, party_public_id: party.public_id },
+                form: { data: { turbo_frame: dom_id(party, :groups_section), turbo_confirm: "Remove from this group?" } },
+                class: "btn btn-ghost btn-xs text-error" %>
+        </div>
       </li>
+    <% end %>
+
+    <% if party.groups.empty? %>
+      <li class="py-3 text-sm opacity-60">No groups.</li>
     <% end %>
   </ul>
 </section>
