--- a/app/views/shared/_user_menu.html.erb
+++ b/app/views/shared/_user_menu.html.erb
@@ -10,7 +10,7 @@
   <div tabindex="0" class="dropdown-content z-10 bg-base-100 rounded-box shadow p-3 w-64">
     <div class="mb-2 text-sm font-semibold">Appearance</div>
     <div class="grid grid-cols-2 gap-2 text-sm">
-      <% ["blueLight","merlotLight","blueDark","merlotDark","encoreLight"].each do |t| %>
+      <% ["blueLight","merlotLight","blueDark","merlotDark","encoreLight","encoreBlue"].each do |t| %>
         <label class="label cursor-pointer justify-start gap-2">
           <input type="radio"
        name="theme"
