--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,12 +1,12 @@
-<%# locals: () %>
-<!-- app/views/shared/_modal.html.erb -->
-<dialog id="comm-modal" class="modal">
-  <div class="modal-box max-w-xl">
+<dialog id="comm-modal" class="modal" data-controller="modal">
+  <div class="modal-box">
     <turbo-frame id="comm_modal_frame"
-                 data-action="turbo:frame-load->modal#open">
+      data-action="turbo:frame-load->modal#open turbo:submit-end->modal#maybeClose">
     </turbo-frame>
   </div>
-  <form method="dialog" class="modal-backdrop">
-    <button aria-label="Close">close</button>
+
+  <!-- click backdrop to close -->
+  <form method="dialog" class="modal-backdrop" data-action="click->modal#close">
+    <button>close</button>
   </form>
 </dialog>
