--- a/app/views/party/parties/_phone_fields.html.erb
+++ b/app/views/party/parties/_phone_fields.html.erb
@@ -42,7 +42,7 @@
       <%= f.label :_destroy, "Remove", for: uid, class: "text-sm" %>
     <% else %>
       <%= f.hidden_field :_destroy, value: "0", id: nil %>
-      <button type="button" class="btn btn-ghost btn-sm" data-action="nested-form#remove">Remove</button>
+      <button type="button" class="btn btn-ghost btn-error btn-sm" data-action="nested-form#remove">Remove</button>
     <% end %>
   </div>
 </div>
